履歴書・職務経歴書記入完了。このあと見直し

--- a/README.org
+++ b/README.org
@@ -1,19 +1,45 @@
 * 職務経歴書
 ** 基本情報
-| key     | value             |
-|---------+-------------------|
-| 名前    | 一瀬 喜弘         |
-| カナ    | イチノセ ヨシヒロ |
-| Twitter |                   |
-| GitHub  |                   |
-| Qiita   |                   |
-| Zenn    |                   |
+| key     | value                              |
+|---------+------------------------------------|
+| Name    | 一瀬 喜弘                          |
+| Kana    | イチノセ ヨシヒロ                  |
+| Twitter | https://twitter.com/maruisannsimai |
+| GitHub  | https://github.com/mikanIchinose   |
+| Qiita   | https://qita.com/Solenoidal        |
+| Zenn    | https://zenn.dev/solenoid          |
 ** 職務経歴
-*** カラビナテクノロジー株式会社(インターン: 2020/09/01~2021/02/28, 正社員: 2021/03/01~)
-- ECサイトのバックエンド開発
-- アパレル会社のアプリ開発
+*** カラビナテクノロジー株式会社(インターン: 2020/09/01-2021/02/28, 正社員: 2021/03/01-)
+**** ECサイトのバックエンド開発(2020/09-2021/04)
+ECCUBEを使ったECサイト構築を行い、主に管理画面の機能開発を担当しました。
+基本機能やプラグインに仕様と合わない動作があれば、仕様に合わせて修正もしました。
+デザインパターンに即して開発を進めました。
+***** 担当業務
+- 実装
+- 本番環境移行処理
+**** アパレル会社のアプリ開発(2021/04-)
+アパレル企業の公式アプリの開発
+はじめてのネイティブアプリ(android)開発でしたが、1週間でキャッチアップして開発に参加しました。
+MVPやDI(依存性注入)などはじめて触れるパターンも多々ありますが、その都度勉強してキャッチアップするようにしています。
+***** 担当業務
+- 実装
+- テスト
+- レビュー環境の改善
 ** スキル
 *** 言語
+- PHP
+- Java
 *** フレームワーク
+- Symfony
+- Android
 *** その他
+- Docker
+- Bash
+- Fish
+- git
 ** やったことはないが興味があるもの
+- Rust
+- Go
+- ネットワーク
+- 関数型言語
+- パフォーマンス改善
